--- a/styles.css
+++ b/styles.css
@@ -27,12 +27,13 @@ body {
 
 /* Header */
 header {
-    background: url('header-image.jpg') center/cover no-repeat;
+    background: url('header-image.jpg');
     color: white;
     text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
     padding: 60px 20px;
     text-align: center;
     font-size: 24px;
+    
 }
 
 /* Navigation */
@@ -84,3 +85,4 @@ header {
         padding: 40px 10px;
     }
 }
+
