--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 body {
     font-family: 'Poppins', Arial, sans-serif;
-    background-color: #F4F7FA;
+    background-color: #EEF5FE;
     margin: 0;
     padding: 0;
     color: #333;
@@ -49,8 +49,8 @@ header {
 
 .nav-link {
     display: flex;
+    gap: 5px;
     align-items: center;
-    gap: 5px; /* Adjust spacing between icon and text */
     padding: 12px 15px;
     font-size: 15px;
     color: #333;
@@ -75,7 +75,11 @@ header {
 .nav-link:hover img {
     filter: brightness(0) invert(1); /* Change icon color on hover */
 }
+.Edit_Icon{
 
+    fill: white;
+
+}
 /* Buttons */
 .btn-primary {
     background-color: #ED4A00;
@@ -92,6 +96,71 @@ header {
     background-color: #c93d00;
     transform: scale(1.05);
 }
+
+/* Container for file upload and display */
+.file-container {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #F4F7FA;
+    overflow: hidden;
+}
+
+/* Upload button positioned in the upper right of the display */
+.file-upload-wrapper {
+    position: absolute;
+
+    right: 20px;
+    z-index: 5;
+}
+
+/* Hide default file input */
+#fileInput {
+    display: none;
+}
+
+/* Custom button */
+.custom-file-button {
+    padding: 12px 20px;
+    background-color: rgba(0, 123, 255, 0);
+    color: white;
+    font-weight: bold;
+    font-size: 13px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+    border: none;
+    cursor: pointer;
+}
+
+/* Hover effect */
+.custom-file-button:hover {
+    /* background-color: rgba(0, 86, 179, 0.9); */
+}
+
+/* File display area */
+#fileDisplay {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    border-radius: 4px;
+}
+
+#fileDisplay img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+
+
+
 
 /* Responsive Design */
 @media (max-width: 768px) {
