--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,12 @@ header {
     justify-content: center;
     background-color: #F4F7FA;
     overflow: hidden;
+    object-fit: cover;
+}
+.file-container img{
+
+    top: -60px; 
+
 }
 
 /* Upload button positioned in the upper right of the display */
@@ -150,6 +156,8 @@ header {
     justify-content: center;
     overflow: hidden;
     border-radius: 4px;
+   
+
 }
 
 #fileDisplay img {
@@ -171,4 +179,28 @@ header {
         font-size: 20px;
         padding: 40px 10px;
     }
+}
+.Section_1{
+
+  
+    background-color: EEF5FE;
+    color: black;
+    text-align: left;
+    line-height: 100px;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+  
+   padding-left: 1%;
+    overflow: hidden;
+    border-radius: 4px;
+
+
+   
+
 }
