--- a/styles.css
+++ b/styles.css
@@ -226,12 +226,25 @@ font-size: 20px;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-80%, -50%);
     color: white;
-    font-size: 24px;
+    font-size: 35px;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    background-color: rgba(0, 0, 0, 0.5);
     padding: 10px 20px;
-    border-radius: 5px;
+    text-align: left;
+ }
+ 
+
+ .small-text {
+    font-size: 18px;
+    font-weight: 400;
+}
+.large-text {   
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 1.2;
+}
+.highlight {
+    color: #ffffff;
 }
