--- a/styles.css
+++ b/styles.css
@@ -218,7 +218,8 @@ header {
 /* Main Container */
 /* ============================= */
 .container {
-    max-width: 1000px;
+    max-width: fit-content;
+    max-height: fit-content;
     margin: auto;
     background: white;
     padding: 20px;
@@ -229,6 +230,7 @@ header {
 /* Buttons Section */
 .buttons {
     margin-bottom: 20px;
+    margin-right: -900px;
 }
 
 /* ============================= */
